kubeflow-pipeline/base/installs/multi-user/istio-authorization-config.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: ml-pipeline-ui
  rules:
    - from:
        - source:
            namespaces:
              - istio-system
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ml-pipeline
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: ml-pipeline
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/kubeflow/sa/ml-pipeline
              - cluster.local/ns/kubeflow/sa/ml-pipeline-ui
              - cluster.local/ns/kubeflow/sa/ml-pipeline-persistenceagent
              - cluster.local/ns/kubeflow/sa/ml-pipeline-scheduledworkflow
              - cluster.local/ns/kubeflow/sa/ml-pipeline-viewer-crd-service-account
              - cluster.local/ns/kubeflow/sa/kubeflow-pipelines-cache
    # For user workloads, which cannot user http headers for authentication
    - when:
        - key: request.headers[kubeflow-userid]
          notValues: ["*"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ml-pipeline-visualizationserver
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: ml-pipeline-visualizationserver
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/kubeflow/sa/ml-pipeline
              - cluster.local/ns/kubeflow/sa/ml-pipeline-ui
              - cluster.local/ns/kubeflow/sa/ml-pipeline-persistenceagent
              - cluster.local/ns/kubeflow/sa/ml-pipeline-scheduledworkflow
              - cluster.local/ns/kubeflow/sa/ml-pipeline-viewer-crd-service-account
              - cluster.local/ns/kubeflow/sa/kubeflow-pipelines-cache

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-cache-server
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: cache-server
  rules:
    - {}

---
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: ml-pipeline-ui
spec:
  host: ml-pipeline-ui.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: ml-pipeline
spec:
  host: ml-pipeline.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: ml-pipeline-visualizationserver
spec:
  host: ml-pipeline-visualizationserver.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
